--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.25
+        image: nginx:invalid-tag
         ports:
         - containerPort: 80
         resources:
