--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -4,7 +4,12 @@ metadata:
   name: demo-app
   namespace: demo
 spec:
-  replicas: 5
+  replicas: 20
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 15
+      maxSurge: 3
   selector:
     matchLabels:
       app: demo-app
