--- a/app/service.yaml
+++ b/app/service.yaml
@@ -7,7 +7,7 @@ spec:
   type: ClusterIP
   selector:
     app: demo-app
-    version: green
+    version: blue
   ports:
   - port: 80
     targetPort: 80
