--- a/app/service.yaml
+++ b/app/service.yaml
@@ -1,13 +1,13 @@
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: demo-service
-#   namespace: demo
-# spec:
-#   type: ClusterIP
-#   selector:
-#     app: demo-app
-#     version: green
-#   ports:
-#   - port: 80
-#     targetPort: 80
+apiVersion: v1
+kind: Service
+metadata:
+  name: demo-service
+  namespace: demo
+spec:
+  type: ClusterIP
+  selector:
+    app: demo-app
+    version: green
+  ports:
+  - port: 80
+    targetPort: 80
